--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  max-width: 88%;
+  
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -101,7 +101,7 @@
 #main article p {
   font-size: 1.2em;
   font-family: 'Lato', sans-serif;
-  margin: 12px 0;
+  margin: 1.12em 0;
 }
 
 #main article footer {
